--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
  <section id="contact">
         <hr>
         <h2> Contact </h2>
-        <p> My contact is My school's email which is:irish4@gccinternationalschool.com.  and my phone number well which is:7208943935.
+        <p> My contact is My school's email which is:irish4@gccinternationalschool.com.  and my phone number as well which is:7208943935.
           <hr>
 </body>
 
